--- a/serverless.yml
+++ b/serverless.yml
@@ -215,9 +215,7 @@ resources:
           -
             AttributeName: id
             KeyType: HASH
-        ProvisionedThroughput:
-          ReadCapacityUnits: 1
-          WriteCapacityUnits: 1
+        BillingMode: PAY_PER_REQUEST
         # add stream to dynamo table
         StreamSpecification:
           StreamViewType: NEW_AND_OLD_IMAGES
